<resources>
    <string name="app_name" translatable="false">WorkItOut!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_favorite_training_app">Your favorite training app</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="too_many_attempts_try_again_later_exception">Too many failed attempts. Try again later</string>
    <string name="invalid_user_login_exception">There is no account associated with this email</string>
    <string name="invalid_password_exception">Password is not correct</string>
    <string name="error_login">Failed to login</string>
    <string name="existing_user_login_exception">There is already an account associated with this email</string>
    <string name="invalid_email">Email address is not valid</string>
    <string name="register_error">Failed to sign up</string>
    <string name="field_not_empty">This field cannot be empty</string>
    <string name="short_password">Password must be at least 8 characters long</string>
    <string name="passwords_not_equal">Validation password is not the same as the new password</string>
    <string name="login_as">Logging in as %s</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="error_fetch_user">Failed to fetch user</string>
    <string name="error_no_email_found">Email error</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="start_routine">Start Routine</string>
    <string name="scheduled_routine_week_day_time">Scheduled: %1$s at %2$s</string>
    <string name="empty" translatable="false" />
    <string name="upcoming_routine">Upcoming routine</string>
    <string name="other_scheduled_routines">Other scheduled routines:</string>
    <string name="nothing_to_see_here">Nothing to see here</string>
    <string name="nothing_to_see_here_image">Nothing To See Here Image</string>
    <string name="logging_out">Logging out…</string>
    <string name="update">Update</string>
    <string name="account_header">Account</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password_var" translatable="false">changePassword</string>
    <string name="delete_account_var" translatable="false">deleteAccount</string>
    <string name="validate_password">Validate Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="settings_user_change_password">Change Password</string>
    <string name="new_password_equal_current_password">New password cannot be the same as your current password</string>
    <string name="error_update_password">Failed to update password</string>
    <string name="password_updated">Password updated</string>
    <string name="user_deleted">User deleted</string>
    <string name="error_delete_user">Failed to delete user account</string>
    <string name="settings_user_delete_account_message">Are you sure you want to delete your account? Type your password to continue:</string>
    <string name="settings_user_delete_account_title">Delete account</string>
    <string name="error_upload_exercise">Failed to upload exercise</string>
    <string name="exercise_image">Exercise Image</string>
    <string name="new_exercise">New Exercise</string>
    <string name="update_exercise">Update Exercise</string>
    <string name="name">Name</string>
    <string name="muscles">Muscles:</string>
    <string name="muscles_not_selected_error">You must select at least one muscle</string>
    <string name="new_routine">New Routine</string>
    <string name="update_routine">Update Routine</string>
    <string name="routine_image">Routine Image</string>
    <string name="time_arrow">&lt;- Time</string>
    <string name="week_day">Week Day</string>
    <string name="save">Save</string>
    <string name="select_image">Select Image</string>
    <string name="please_select_an_image">Please Select an Image!</string>
    <string name="description">Description</string>
    <string name="schedule">Schedule:</string>
    <string name="de_schedule">De-Schedule</string>
    <string name="exercises">Exercises:</string>
    <string name="field_long">This field must be shorter</string>
    <string name="field_short">This field must be longer</string>
    <string name="unschedule_or_complete_field">De-Schedule or complete this field</string>
    <string name="error_upload_routine">Failed to upload routine</string>
    <string name="time_scheduled">Time Scheduled</string>
    <string name="exercise_could_not_be_deleted">Exercise could not be deleted</string>
    <string name="start_by_youtube_link">Field should start by https://www.youtube.com/watch?v=</string>
    <string name="new_youtube_video_link">New Youtube Video (URL)</string>
    <string name="error_fetch_exercises">Failed to fetch exercises</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete_exercise">Delete %s</string>
    <string name="delete_exercise_confirmation_message">Are you sure you want to delete this exercise? All its data will be deleted forever from the database</string>
    <string name="exercises_title">Exercises</string>
    <string name="navigation">Navigation</string>
    <string name="home_menu">Home</string>
    <string name="routines_menu">Routines</string>
    <string name="exercises_menu">Exercises</string>
    <string name="delete">Delete</string>
    <string name="routine_could_not_be_deleted">Exercise could not be deleted</string>
    <string name="my_routines">My Routines</string>
    <string name="delete_routine">Delete %s</string>
    <string name="delete_routine_confirmation_message">Are you sure you want to delete this routine? All its data will be deleted forever from the database</string>
    <string name="create_routine">Create Routine</string>
    <string name="create_exercise">Create Custom Exercise</string>
    <string name="routine_not_scheduled">Routine Not Scheduled</string>
    <string name="suggested_videos">Suggested Videos</string>
    <string name="existing_video_link">This video has already been added</string>
    <string name="add_video">Add Video</string>
    <string name="choose_exercise">Choose Exercises</string>
    <string name="select_exercises">Select Exercises</string>
    <string name="selected">Selected</string>
    <string name="edit">Edit</string>
    <string name="long_press_to_select">Long press to select</string>
    <string name="use_reps">Use Reps</string>
    <string name="measure_by">Measure By</string>
    <string name="time">Time</string>
    <string name="weight">Weight</string>
    <string name="sets_number">Sets: %d</string>
    <string name="reps_number">Reps: %d</string>
    <string name="use_reps_not_able_to_measure_by_reps">If you want to use reps you won\'t be able to measure by reps</string>
    <string name="you_must_select_at_least_one_measure">You must select at least one measure</string>
    <string name="add">Add</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="save_and_exit"><![CDATA[Save & Exit]]></string>
    <string name="training">Training</string>
    <string name="reps_log" translatable="false">%d</string>
    <string name="weight_log" translatable="false">%d kgs.</string>
    <string name="time_log" translatable="false">%d s.</string>
    <string name="exercise_deleted">Exercise deleted</string>
    <string name="exercise_updated">Exercise updated</string>
    <string name="routine_deleted">Routine deleted</string>
    <string name="routine_updated">Routine updated</string>
    <string name="training_uploaded">Training uploaded</string>
    <string name="error_uploading_training">Failed to upload training</string>
    <string name="exercise_information">Exercise Information</string>
    <string name="weight_kg">Weight (Kg.)</string>
    <string name="time_s">Time (s.)</string>
    <string name="save_record">Save Record</string>
    <string name="records">Records</string>
    <string name="exercise">Exercise</string>
    <string name="routine">Routine</string>
    <string name="weight_number">Weight: %d Kg.</string>
    <string name="time_number">Time: %d s.</string>
    <string name="date_at_time">%s at %s</string>
    <string name="exit_training">Exit Training</string>
    <string name="exit_training_message"><![CDATA[Do you really want to exit from the current training? Your progress won\'t be saved and will be deleted. If you want to save before exiting press \"Save & Exit\"]]></string>
    <string name="training_in_progress">Training in progress</string>
    <string name="routine_routine">Routine: %s</string>
    <string name="training_notifications">Training Notifications</string>
    <string name="records_training_saved">Training records saved</string>
    <string name="need_connection">You need internet connection</string>
    <string name="video_not_available_without_connection">Video not available without connection</string>
</resources>