<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.RegisterFragment">

    <data>
        <variable name="sModel" type="es.ucm.fdi.workitout.viewModel.StartSharedViewModel" />
        <variable name="registerFrag" type="es.ucm.fdi.workitout.view.RegisterFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_form"
            android:contentDescription="@string/profile_icon"
            app:srcCompat="@drawable/ic_round_person_24"/>

        <LinearLayout
            android:id="@+id/ll_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints="@string/name"
                android:hint="@string/name"
                app:errorEnabled="true">

                <!--suppress AndroidUnknownAttribute -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:afterTextChanged="@{() -> sModel.clearErrors(tilName)}"
                    android:text="@={sModel.user.value.name}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autofillHints="@string/email_address"
                android:hint="@string/email_address"
                app:errorEnabled="true">

                <!--suppress AndroidUnknownAttribute -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:afterTextChanged="@{() -> sModel.clearErrors(tilEmail)}"
                    android:text="@={sModel.user.value.email}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/password"
                android:autofillHints="@string/password"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">

                <!--suppress AndroidUnknownAttribute -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:afterTextChanged="@{() -> sModel.clearErrors(tilPassword)}"
                    android:text="@={sModel.user.value.tempPassword}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_validate"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/repeat_password"
                android:autofillHints="@string/repeat_password"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">

                <!--suppress AndroidUnknownAttribute -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_validate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:afterTextChanged="@{() -> sModel.clearErrors(tilPasswordValidate)}"
                    android:text="@={sModel.user.value.tempPasswordValidate}"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_form">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> registerFrag.goBack()}"
                android:text="@string/back" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="?attr/materialButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:onClick="@{() -> sModel.register(pBar, tilName, tilEmail, tilPassword, tilPasswordValidate)}"
                android:text="@string/register" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/p_Bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>