<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.CreateExerciseFragment">

    <data>
        <import type="android.view.View" />
        <variable name="sModel" type="es.ucm.fdi.workitout.viewModel.MainSharedViewModel" />
        <variable name="exercise" type="es.ucm.fdi.workitout.model.Exercise" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationOnClickListener="@{() -> sModel.navigate(0)}"
                app:title="Exercise"
                app:titleCentered="true"
                app:navigationIcon="@drawable/ic_round_arrow_back_24">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="26dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_exercise"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{exercise.imageUrl}"
                        android:translationZ="2dp"
                        android:contentDescription="@string/exercise_image" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_name"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:enabled="false"
                    android:layout_marginBottom="8dp">

                    <!--suppress AndroidUnknownAttribute -->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:enabled="false"
                        android:text="@{exercise.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_description"
                    style="?attr/textInputFilledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:enabled="false"
                    android:layout_marginBottom="16dp">

                    <!--suppress AndroidUnknownAttribute -->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|top"
                        android:lines="3"
                        android:inputType="textMultiLine"
                        android:enabled="false"
                        android:text="@{exercise.description}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="?attr/textAppearanceTitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/muscles" />
                <com.google.android.material.textview.MaterialTextView
                    style="?attr/textAppearanceTitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@{exercise.muscles.toString()}"/>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="?attr/materialButtonStyle"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="@{() -> sModel.deleteExercise()}"
            android:text="Delete Exercise" />

         </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>